<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeparturesFragment">

    <Button
        android:id="@+id/get_departures_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/search_go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departure_two"
        app:layout_constraintVertical_bias="0.477" />

    <Spinner
        android:id="@+id/routes_depFrag_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintBottom_toTopOf="@+id/direction_spinner"
        app:layout_constraintEnd_toStartOf="@+id/route_ok_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departure_title" />

    <Spinner
        android:id="@+id/direction_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintBottom_toTopOf="@+id/stops_spinner"
        app:layout_constraintEnd_toStartOf="@+id/direction_ok_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routes_depFrag_spinner" />

    <Spinner
        android:id="@+id/stops_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintBottom_toTopOf="@+id/departure_two"
        app:layout_constraintEnd_toEndOf="@+id/direction_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direction_spinner" />

    <TextView
        android:id="@+id/departure_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/departures"
        app:layout_constraintBottom_toTopOf="@+id/departure_three"
        app:layout_constraintEnd_toStartOf="@+id/time_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departure_one" />

    <TextView
        android:id="@+id/departure_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/departures"
        app:layout_constraintBottom_toTopOf="@+id/departure_two"
        app:layout_constraintEnd_toStartOf="@+id/time_one"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stops_spinner" />

    <TextView
        android:id="@+id/departure_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/departures"
        app:layout_constraintBottom_toTopOf="@+id/get_departures_button"
        app:layout_constraintEnd_toStartOf="@+id/time_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departure_two" />

    <TextView
        android:id="@+id/departure_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/departures"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/routes_depFrag_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/direction_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/direction"
        app:layout_constraintBottom_toTopOf="@+id/direction_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/routes_depFrag_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/select_prompt"
        app:layout_constraintBottom_toTopOf="@+id/routes_depFrag_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/stops_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/stop"
        app:layout_constraintBottom_toTopOf="@+id/stops_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/time_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/departure_one"
        app:layout_constraintTop_toTopOf="@+id/departure_one" />

    <TextView
        android:id="@+id/time_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/departure_two"
        app:layout_constraintTop_toTopOf="@+id/departure_two" />

    <TextView
        android:id="@+id/time_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/departure_three"
        app:layout_constraintTop_toTopOf="@+id/departure_three" />

    <Button
        android:id="@+id/route_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@android:string/ok"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/routes_depFrag_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/routes_depFrag_spinner"
        app:layout_constraintTop_toTopOf="@+id/routes_depFrag_spinner" />

    <Button
        android:id="@+id/direction_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@android:string/ok"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/direction_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/direction_spinner"
        app:layout_constraintTop_toTopOf="@+id/direction_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>